# tydra

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate-docs.sh
.github/: release.yml
.github/workflows/: release.yml
doc/: tydra-actions.5  tydra-actions.5.md  tydra.1  tydra.1.md
doc/examples/: bookmarks.yml  i3ctl.yml  tydra-confirm  tydra-popup
src/: main.rs  runner.rs
src/actions/: action_file.rs  entry.rs  group.rs  mod.rs  page.rs  rendering.rs  settings.rs  validator.rs
tests/fixtures/: complex.yml  minimal.yml  unknown_page.yml
