[package]
name = "tydra"
description = "Shortcut menu-based task runner, inspired by Emacs Hydra"
version = "1.0.2"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0.16"
serde = "1.0.104"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
structopt = "0.3"
failure = "0.1.6"
failure_derive = "0.1.6"
tui = "0.2.3"
termion = "1.5.5"
nix = "0.17.0"
